fix: remove z-index, use box shadow inset on ztd

--- a/src/components/table/z-tr/styles.css
+++ b/src/components/table/z-tr/styles.css
@@ -56,10 +56,9 @@
   background-color: var(--color-background);
 }
 
-:host(:hover) {
-  position: relative;
-  z-index: 10;
-  box-shadow: 0 4px 4px -2px var(--shadow-color-base, rgb(0 0 0 / 20%));
+:host(:hover) ::slotted(z-td),
+:host(:hover) ::slotted(z-th) {
+  box-shadow: 0 -6px 4px -4px var(--shadow-color-base, rgb(0 0 0 / 20%)) inset;
 }
 
 :host(:focus) {
